// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test hello server hello with name 1`] = `
"<!doctype html>
<html >
  <head>
    <title data-react-helmet=\\"true\\">Hello Chris !</title>
    <meta data-react-helmet=\\"true\\" charset=\\"utf-8\\"/><meta data-react-helmet=\\"true\\" content=\\"width=device-width, initial-scale=1\\" name=\\"viewport\\"/>
    
    
    <link rel=\\"stylesheet\\" href=\\"/es5.css?test\\" />
    
    <script defer src=\\"https://polyfill.io/v2/polyfill.min.js?features=default,es2015,es2016,es2017,localStorage,fetch,Intl&unknown=polyfill\\"></script>
    
    <script>
window.__VERSION__='test';
window.__INITIAL_DATA__={\\"sanitizedState\\":{}};
</script>
<script defer src=\\"/es5.js?test\\"></script>
  </head>
  <body >
    <div id=\\"react-app\\"><div><div>Hello World !</div><div class=\\"cof8blg\\"><span data-testid=\\"hello-text\\" class=\\"heuv5cu\\">Hello Chris !</span><input type=\\"text\\" data-testid=\\"input-name\\" autoComplete=\\"off\\" value=\\"Chris\\" class=\\"i12t16ta\\"/></div><div><p>You clicked <!-- -->0<!-- --> times</p><button type=\\"button\\">Click me</button></div><div><button type=\\"button\\">Click me to throw</button><button type=\\"button\\">Click me to log error</button></div></div></div>
  </body>
</html>"
`;

exports[`test hello server hello without name 1`] = `
"<!doctype html>
<html >
  <head>
    <title data-react-helmet=\\"true\\">Hello World !</title>
    <meta data-react-helmet=\\"true\\" charset=\\"utf-8\\"/><meta data-react-helmet=\\"true\\" content=\\"width=device-width, initial-scale=1\\" name=\\"viewport\\"/>
    
    
    <link rel=\\"stylesheet\\" href=\\"/es5.css?test\\" />
    
    <script defer src=\\"https://polyfill.io/v2/polyfill.min.js?features=default,es2015,es2016,es2017,localStorage,fetch,Intl&unknown=polyfill\\"></script>
    
    <script>
window.__VERSION__='test';
window.__INITIAL_DATA__={\\"sanitizedState\\":{}};
</script>
<script defer src=\\"/es5.js?test\\"></script>
  </head>
  <body >
    <div id=\\"react-app\\"><div><div>Hello World !</div><div class=\\"cof8blg\\"><span data-testid=\\"hello-text\\" class=\\"heuv5cu\\">Hello World !</span><input type=\\"text\\" data-testid=\\"input-name\\" autoComplete=\\"off\\" value=\\"\\" class=\\"i12t16ta\\"/></div><div><p>You clicked <!-- -->0<!-- --> times</p><button type=\\"button\\">Click me</button></div><div><button type=\\"button\\">Click me to throw</button><button type=\\"button\\">Click me to log error</button></div></div></div>
  </body>
</html>"
`;
